--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </p>
         <input
           class="question-inputfield"
-          placeholder="eg 5pm, 2am..."
+          placeholder="eg 5pm, 2am...(Write In Numbers)"
           type="text"
           name=""
           id="skill-time"
@@ -55,7 +55,7 @@
         <p class="question">What was your screen time today?*Non Productive*</p>
         <input
           class="question-inputfield"
-          placeholder="eg 4, 5hours"
+          placeholder="eg 4, 5hours(Write In Numbers)"
           type="text"
           name=""
           id="screen-time"
@@ -75,7 +75,7 @@
         <p class="question">How many hours you slept today?</p>
         <input
           class="question-inputfield"
-          placeholder="eg 6/8hours"
+          placeholder="eg 6/8hours(Write In Numbers)"
           type="text"
           name=""
           id="sleep-time"
